# comfygo

./: .gitignore  README.md  pyproject.toml
src/comfygo/: __init__.py
src/comfygo/cli/: __init__.py  main.py  setup_cmd.py
src/comfygo/config/: __init__.py  loader.py  randomizable.py  schema.py
src/comfygo/nodes/: __init__.py  conditioning.py  latent.py  loaders.py  model_patches.py  sampling.py  shims.py
src/comfygo/nodes/gguf/: __init__.py  dequant.py  loader.py  ops.py  patcher.py
src/comfygo/nodes/impact/: __init__.py  config.py  core.py  hooks.py  impact_sampling.py  subcore.py  utils.py
src/comfygo/prompt/: __init__.py  prompter.py
src/comfygo/utils/: __init__.py  console.py  files.py  logger.py
src/comfygo/workflows/: __init__.py  zit_two_pass.py
